@@ -22,7 +22,7 @@ import org.flowable.common.engine.impl.runtime.ClockReader;
  */
 public class DurationBusinessCalendar extends BusinessCalendarImpl {
 
-    public static String NAME = "duration";
+    public static final String NAME = "duration";
 
     public DurationBusinessCalendar(ClockReader clockReader) {
         super(clockReader);
@@ -83,7 +83,7 @@ public class DurationBusinessCalendar extends BusinessCalendarImpl {
     // }
     //
     // String quantityText = singleUnitQuantity.substring(0, spaceIndex);
-    // Integer quantity = new Integer(quantityText);
+    // Integer quantity = Integer.valueOf(quantityText);
     //
     // String unitText = singleUnitQuantity
     // .substring(spaceIndex+1)
